# sensor_server

./: .dockerignore  .env.example  .env.production  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.local
.github/workflows/: ci.yml
assets/: index.html  script.js
migrations/: 20241204153819_create_readings_table.sql
src/: main.rs
