[package]
name = "sensor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
